# brick

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  settings.gradle.kts
.github/workflows/: main.yml
composeApp/: build.gradle.kts
composeApp/src/desktopMain/kotlin/: main.kt
composeApp/src/desktopMain/kotlin/org/cec/brick/api/: Brick.kt  BrickPlugin.kt
composeApp/src/desktopMain/kotlin/org/cec/brick/app/: App.kt
composeApp/src/desktopMain/kotlin/org/cec/brick/config/: Settings.kt
composeApp/src/desktopMain/kotlin/org/cec/brick/engine/: Attributes.kt  util.kt  (+3 more)
engine/: build.gradle.kts  go.mod  go.sum  main.go  main.py  pyproject.toml
engine/brick_engine/: __main__.py  event.py  journal.py  server.py
engine/pkg/: journal.go  pidfile.go
engine/src/desktopMain/kotlin/org/cec/brick/engine/: BrickDsl.kt  BrickEngine.kt  PipelineCall.kt  PipelineEngine.kt  util.kt
engine/src/desktopMain/kotlin/org/cec/brick/engine/api/: Brick.kt  BrickPlugin.kt
engine/src/desktopMain/kotlin/org/cec/brick/engine/event/: BrickEvent.kt  JournalEvent.kt  JournalEventType.kt
engine/src/desktopMain/kotlin/org/cec/brick/engine/journal/: JournalSubsystem.kt
engine/src/desktopMain/kotlin/org/cec/brick/engine/util/: serializers.kt
engine/tests/: test_logs.py
gehirn/: build.gradle.kts
gehirn/src/desktopMain/kotlin/org/cec/triumvirate/: TriumvirateShim.kt
gradle/: libs.versions.toml
src/main/: index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte
src/renderer/src/assets/: main.css
src/renderer/src/lib/: Fomantic.svelte
(+16 files in other folders)
